Add Auth interceptors.

--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
                                     <executable>bash</executable>
                                     <workingDirectory>${project.basedir}</workingDirectory>
                                     <commandlineArgs>
-                                        -c "java -jar server/target/server-1.0-SNAPSHOT.jar &amp; python client/grpc-client.py"
+                                        -c "export JWT_SECRET=L8hHXsaQOUjk5rg7XPGv4eL36anlCrkMz8CJ0i/8E/0=; java -jar server/target/server-1.0-SNAPSHOT.jar &amp; python client/grpc_client.py"
                                     </commandlineArgs>
                                 </configuration>
                             </execution>
