--- a/k8s/java-k8s/client/deployment.yaml
+++ b/k8s/java-k8s/client/deployment.yaml
@@ -1,21 +1,10 @@
 apiVersion: v1
-kind: Service
-metadata:
-  name: client
-spec:
-  selector:
-    app: client
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 9030
----
-apiVersion: v1
 kind: Pod
 metadata:
   name: client
   labels:
     app: client
+#  namespace: "grpc-demo"
 spec:
   restartPolicy: Never
   containers:
@@ -24,3 +13,9 @@ spec:
       imagePullPolicy: Never
       ports:
         - containerPort: 9030
+      env:
+        - name: JWT_SECRET
+          valueFrom:
+            secretKeyRef:
+              name: jwt-secret
+              key: JWT_SECRET
