--- a/k8s/java-k8s/server/deployment.yaml
+++ b/k8s/java-k8s/server/deployment.yaml
@@ -1,17 +1,4 @@
 apiVersion: v1
-kind: Service
-metadata:
-  name: grpc-crashing-server
-spec:
-  selector:
-    app: server
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 9030
-
----
-apiVersion: v1
 kind: Pod
 metadata:
   name: server
@@ -25,3 +12,9 @@ spec:
       imagePullPolicy: Never
       ports:
         - containerPort: 9030
+      env:
+        - name: JWT_SECRET
+          valueFrom:
+            secretKeyRef:
+              name: jwt-secret
+              key: JWT_SECRET
