--- a/k8s/java-k8s/server/deployment.yaml
+++ b/k8s/java-k8s/server/deployment.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: server
+  name: java-server
   labels:
-    app: server
+    app: java-server
 spec:
   restartPolicy: Never
   containers:
-    - name: server
+    - name: java-server
       image: grpc-java-server:latest
       imagePullPolicy: Never
       ports:
@@ -18,3 +18,7 @@ spec:
             secretKeyRef:
               name: jwt-secret
               key: JWT_SECRET
+        - name: SERVER_HOST
+          value: grpc-crashing-server
+        - name: SERVER_PORT
+          value: "80"
