--- a/k8s/python-k8s/client/service.yaml
+++ b/k8s/python-k8s/client/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: client
+  name: python-client
 spec:
   selector:
-    app: client
+    app: python-client
   ports:
     - protocol: TCP
       port: 80
