--- a/k8s/python-k8s/server/service.yaml
+++ b/k8s/python-k8s/server/service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: grpc-crashing-server
 spec:
   selector:
-    app: server
+    app: python-server
   ports:
     - protocol: TCP
       port: 80
